Test/typing/should_fail/methods_abstract_private.java
package tutu.titi.toto;

class A {

    abstract private void myMethod(){}

}